--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.16"
   }
 }
