--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "social-linkup-api",
+  "name": "social-network-api",
   "version": "1.0.0",
-  "description": "to build an API for a social network web application where users can share their thoughts, react to friends’ thoughts, and create a friend list. You’ll use Express.js for routing, a MongoDB database, and the Mongoose ODM.",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Yutthana00/social-linkup-api.git"
+    "url": "git+https://github.com/Yutthana00/social-linkup-api"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +17,10 @@
   },
   "homepage": "https://github.com/Yutthana00/social-linkup-api#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.3.2",
     "nodemon": "^2.0.16"
   }
 }
